# act4ebrd-resolution-bug

./: .gitignore  README.md  fleet_diesel.mcdp  fleet_glf.mcdp  network_service_catalog_1_8_190_2_6_10.json
act4brd/: pyproject.toml
act4brd.mcdplib/: act4brd.graphvis.json  act4brd.mcdp  brd.mcdp_query.yaml  customer_experience.graphvis.json  customer_experience.mcdp  fleet.graphvis.json  fleet.mcdp  fleet.mcdp_poset  fleet_dlf.mcdp  fleet_elf.mcdp  fleet_trival.graphvis.json  fleet_trival.mcdp  fleet_type_1.graphvis.json  fleet_type_1.mcdp  fleet_type_2.graphvis.json  fleet_type_2.mcdp  fleet_type_3.mcdp  fleet_type_4.mcdp  guideline.graphvis.json  guideline.mcdp  network_service_design.mcdp  satisfied_demand.mcdp_poset  service_network_design.graphvis.json  service_network_design.mcdp
act4brd.mcdplib/yaml_catalogues/: fleet_trival.dpc.yaml  guideline.dpc.yaml  guideline_dpc.yaml  service_network_design.dpc.yaml
act4brd/act4brd/: data.py  graph.py
eda/: network_design.ipynb
